--- a/package.json
+++ b/package.json
@@ -15,20 +15,17 @@
     "test:coverage": "NODE_ENV=testing jest --coverage"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.18",
-    "jest": "^24.9.0",
-    "nodemon": "^1.19.3",
-    "supertest": "^4.0.2",
-    "ts-jest": "^24.1.0",
-    "ts-loader": "^6.2.0",
-    "typescript": "^3.6.3",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-node-externals": "^1.7.2",
+    "@types/node": "^16.3.1",
+    "nodemon": "^2.0.12",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.5",
+    "webpack": "^5.44.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-node-externals": "^3.0.0",
     "webpack-shell-plugin": "^0.5.0"
   },
   "dependencies": {
-    "@types/express": "^4.17.1",
+    "@types/express": "^4.17.13",
     "express": "^4.17.1"
   }
 }
