--- a/package.json
+++ b/package.json
@@ -1,28 +1,19 @@
 {
   "name": "typescript-node-server",
   "version": "1.0.0",
-  "main": "index.js",
   "repository": "git@github.com:ed42311/typescript-node-server.git",
   "author": "<14878694+ed42311@users.noreply.github.com>",
   "license": "MIT",
   "scripts": {
-    "build": "NODE_ENV=production ./node_modules/webpack/bin/webpack.js",
-    "build:dev": "NODE_ENV=development ./node_modules/webpack/bin/webpack.js",
-    "start": "node build /index.js",
-    "start:dev": "NODE_ENV=development nodemon build/index.js",
-    "test": "NODE_ENV=testing jest",
-    "test:watch": "NODE_ENV=testing jest --watch",
-    "test:coverage": "NODE_ENV=testing jest --coverage"
+    "dev": "nodemon index.ts",
+    "build": "tsc --project ./"
   },
   "devDependencies": {
     "@types/node": "^16.3.1",
     "nodemon": "^2.0.12",
-    "ts-loader": "^9.2.3",
-    "typescript": "^4.3.5",
-    "webpack": "^5.44.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-node-externals": "^3.0.0",
-    "webpack-shell-plugin": "^0.5.0"
+    "prettier": "^2.3.2",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
